tests/baselines/reference/parserMemberAccessExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts (8 errors) ====
    Foo<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    Foo.Bar<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    Foo<T>.Bar();
          ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'T'.
    Foo<T>.Bar<T>();
          ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'T'.
    